add img to explain DNN

--- a/agent1.ipynb
+++ b/agent1.ipynb
@@ -183,7 +183,8 @@
     "\n",
     "## Exemple concret\n",
     "Nous voulons donner au modèl une action et obtenir une prédiction d'un feedback. La sortie nous donnant un vecteur de probabilité, nous voulons un vecteur de même taille que tout les feedbacks possible. Nous prendrons la probabilité la plus haute comme prédiction.\n",
-    "\n"
+    "\n",
+    "![explain DNN](./img/explainDNN.png)\n"
    ]
   },
   {
