--- a/agent1.ipynb
+++ b/agent1.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
     "x_train = torch.tensor(x_train, dtype=torch.float).to(device)\n",
     "y_train = torch.tensor(y_train, dtype=torch.int64).to(device)\n",
     "x_test = x_train\n",
-    "y_train = y_train\n",
+    "y_test = y_train\n",
     "\n",
     "# Transforme y_fit en one hot\n",
     "# Comme vue précédament, notre sortie est un vecteur qui donne des probabilié\n",
