modify name deepDNN to DeepDNN and add some feature link to DNN

--- a/agent1.ipynb
+++ b/agent1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "from environnement.small_loop import small_loop\n",
     "\n",
     "# model machine learning\n",
-    "from model.deepNN import *\n",
+    "from model.DeepNN import *\n",
     "from model.Tokenizer import *\n",
     "from outil import *"
    ]
