--- a/agent2.ipynb
+++ b/agent2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "from environnement.small_loop import small_loop\n",
     "\n",
     "# model machine learning\n",
-    "from model.deepNN import *\n",
+    "from model.DeepNN import *\n",
     "from model.Tokenizer import *\n",
     "from outil import *\n",
     "from inter.interactions import Interaction\n",
