--- a/DNN_Tutorial.ipynb
+++ b/DNN_Tutorial.ipynb
@@ -9,8 +9,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c77d524e-474f-4109-9381-aa88e2fb926b",
+   "metadata": {},
+   "source": [
+    "Exemple: une couche de 10 neurones et une couche de 5 :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
+   "id": "6903ecbd-2781-47df-9e24-9193a6797dd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hidden_size = [10, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50f9747b-884e-42cf-a9db-c38df6337cb4",
+   "metadata": {},
+   "source": [
+    "ou autre exemple avec une couche de 3 neurones qui est siffisant pour l'environnement 1 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "22502a5a-3f6e-404c-b30e-38549d715c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hidden_size = [3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "f69bfbe4-f786-493b-862a-1eaed8541971",
    "metadata": {},
    "outputs": [
@@ -18,35 +54,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "liste hidden init [10, 5]\n"
+      "liste hidden init [3]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "DeepNetwork(\n",
-       "  (fc1): Linear(in_features=1, out_features=10, bias=True)\n",
-       "  (hidden_layers): ModuleList(\n",
-       "    (0): Linear(in_features=10, out_features=5, bias=True)\n",
-       "  )\n",
-       "  (fc4): Linear(in_features=5, out_features=2, bias=True)\n",
+       "  (fc1): Linear(in_features=1, out_features=3, bias=True)\n",
+       "  (hidden_layers): ModuleList()\n",
+       "  (fc4): Linear(in_features=3, out_features=2, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Importe le modèle préparé par PE\n",
-    "from model.deepNN import DeepNetwork\n",
+    "from model.DeepNN import DeepNetwork\n",
     "\n",
-    "# Première couche cachée: 10 neurones \n",
-    "# Deuxième couche cachée: 5 neurones\n",
     "# Entrée: 1 action \n",
-    "# Sortie: 2 probabilités de chaque outcome\n",
-    "model_ML = DeepNetwork(hidden_size=[10, 5], input_size=1, output_size=2)\n",
+    "# Sortie: 2 probabilités (une pour chaque outcome)\n",
+    "model_ML = DeepNetwork(hidden_size=hidden_size, input_size=1, output_size=2)\n",
     "model_ML.to(\"cpu\")"
    ]
   },
@@ -60,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "da92a5d3-7726-434f-8b16-620f547b83d4",
    "metadata": {},
    "outputs": [
@@ -110,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "1940305a-0382-474b-9bca-91a25c59855a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "58900391-266c-48bb-9fb3-16a33f4af1da",
    "metadata": {},
    "outputs": [],
@@ -143,7 +175,7 @@
    "id": "53930b3d-0811-414f-a4e0-c77cd94d3e06",
    "metadata": {},
    "source": [
-    "# On crée un dataset"
+    "# On crée un dataset d'évaluation"
    ]
   },
   {
@@ -156,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "id": "f7e5cda3-76f4-4d4c-a872-fc32ed2e2a25",
    "metadata": {},
    "outputs": [
@@ -190,12 +222,12 @@
    "id": "467e9ffd-762d-4bb3-aae5-268ca31d8591",
    "metadata": {},
    "source": [
-    "On crée un loader pour charger le dataset dans le modèle"
+    "On crée un loader pour charger le dataset d'évaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "b7ac5d80-dbe0-427a-ac34-aa210db003bd",
    "metadata": {},
    "outputs": [],
@@ -218,11 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "131e5434-95e4-4573-a5a2-3c914400589e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importe la fonction train préparée par PE\n",
+    "from model.DeepNN import train\n",
+    "\n",
     "def fit(action, outcome):\n",
     "    action = tokenizer.encode(action)\n",
     "    action = torch.tensor([action], dtype=torch.float).to(\"cpu\")\n",
@@ -237,13 +272,23 @@
     "          optimizer=optimizer,\n",
     "          loss_func=loss_func,\n",
     "          nb_epochs=1,\n",
-    "          validate_loader=validate_loader,\n",
+    "          validate_loader=None, # validate_loader,\n",
     "          print_=True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d53ef31a-79be-4de5-92a1-16f7d7341ddf",
+   "metadata": {},
+   "source": [
+    "On entraine le modèle dans en environnement ou action `a` produit outcome `x` et action `b` produit outcome `y`.\n",
+    "\n",
+    "Utiliser `Ctrl` + `Enter` pour l'exécuter plusieurs fois et voir la loss diminuer à chaque appel."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 95,
    "id": "bb2b1cba-e7df-4f26-9505-dd2557745d5f",
    "metadata": {},
    "outputs": [
@@ -251,8 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1,\u001b[0;34m 0.5 \u001b[0m, Loss: 0.6984\n",
-      "Epoch 1/1,\u001b[0;34m 0.5 \u001b[0m, Loss: 0.6932\n"
+      "Epoch 1/1,\u001b[0m, Loss: 0.1508\n",
+      "Epoch 1/1,\u001b[0m, Loss: 0.1062\n"
      ]
     }
    ],
@@ -271,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 62,
    "id": "d6ed6716-ca40-4b83-b228-7ce22ede7b4a",
    "metadata": {},
    "outputs": [],
@@ -280,15 +325,15 @@
     "    action = tokenizer.encode(action)\n",
     "    action = torch.tensor([action], dtype=torch.float).to(\"cpu\")\n",
     "    model_ML.eval() # On peut le passer en mode evaluation\n",
-    "    x = model_ML(action)\n",
-    "    print(x)\n",
-    "    x = torch.argmax(x, dim=0).item()\n",
-    "    return tokenizer.decode(x)"
+    "    prediction_tensor = model_ML(action)\n",
+    "    print(prediction_tensor)\n",
+    "    predicted_outcome_token = torch.argmax(prediction_tensor, dim=0).item()\n",
+    "    return tokenizer.decode(predicted_outcome_token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 100,
    "id": "4f74ccc7-8e87-4006-b574-ff633f8125ea",
    "metadata": {},
    "outputs": [
@@ -296,9 +341,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.2534, 0.2635], grad_fn=<ViewBackward0>)\n",
-      "Predication pour a: y\n",
-      "tensor([0.2534, 0.2635], grad_fn=<ViewBackward0>)\n",
+      "tensor([ 0.5221, -1.3315], grad_fn=<ViewBackward0>)\n",
+      "Predication pour a: x\n",
+      "tensor([-1.5422,  0.7371], grad_fn=<ViewBackward0>)\n",
       "Predication pour b: y\n"
      ]
     }
@@ -311,9 +356,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f72f5298-41e0-498a-92fa-e4ec99b05dd0",
+   "metadata": {},
+   "source": [
+    "Si le modèle a été suffisement entrainé, il prédit correctement que action `a` produit outcome `x` et `b` produit `y`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b52228-6bb1-44dd-8094-ca0dcebf8f03",
+   "id": "fc77c654-c4df-4c72-92ca-939ca359ddc0",
    "metadata": {},
    "outputs": [],
    "source": []
