--- a/DNN_Tutorial.ipynb
+++ b/DNN_Tutorial.ipynb
@@ -121,7 +121,7 @@
     "# Maintenant pour encoder une action ou un outcome nous pouvons faire :\n",
     "print('Test encode a:', tokenizer.encode('a'))\n",
     "# et pour decoder :\n",
-    "print('Test decode l:', tokenizer.decode(1))"
+    "print('Test decode 1:', tokenizer.decode(1))"
    ]
   },
   {
@@ -264,9 +264,9 @@
     "    outcome = tokenizer.encode(outcome)\n",
     "    outcome = torch.tensor(outcome, dtype=torch.long).to(\"cpu\")\n",
     "    outcome = torch.nn.functional.one_hot(outcome, num_classes=2).to(torch.float)\n",
-    "    # Qu'est ce que ca fait ?\n",
+    "    # On passe le modèle en mode train\n",
     "    model_ML.train()\n",
-    "\n",
+    "    # On appelle la fonction d'entrainement \n",
     "    train(model=model_ML, \n",
     "          train_data=[(action, outcome)],\n",
     "          optimizer=optimizer,\n",
