--- a/agent4.ipynb
+++ b/agent4.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,12 +122,15 @@
     "        \n",
     "        if isinstance(self._model, torch.nn.Module):\n",
     "            self._model.train()\n",
-    "            actions = torch.tensor(actions, dtype=torch.float).to(device)\n",
-    "            outcomes = torch.tensor(outcomes, dtype=torch.long).to(device)\n",
-    "            data_loarder = CustomLoader(actions=actions, outcomes=outcomes,\n",
+    "            actions = torch.tensor(actions, dtype=torch.float).to(device) # On passe toutes les actions que l'agent a fais\n",
+    "            outcomes = torch.tensor(outcomes, dtype=torch.long).to(device) # On passe toutes oputcomes qu'il a recut\n",
+    "            data_loarder = CustomLoader(actions=actions, outcomes=outcomes, # On va créer un dataset\n",
     "                         context_lenght= context_lenght)\n",
+    "            \n",
+    "            # A la place de donnée x = [act1] y = [out1]\n",
+    "            # Nous voulons donné : x = [act1, out1, act2] y = [out2]\n",
     "\n",
-    "            data_loader = torch.utils.data.DataLoader(\n",
+    "            data_loader = torch.utils.data.DataLoader( # On utilise torch pour charger les données\n",
     "                data_loarder,batch_size=32, shuffle=True)\n",
     "\n",
     "            train_with_batch(model=self._model, \n",
@@ -288,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
