update with some features ?

--- a/agent4.ipynb
+++ b/agent4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "# model machine learning\n",
     "from model.DeepNN import *\n",
     "from model.Tokenizer import *\n",
-    "from model.CustomLoader import CustomLoader\n",
+    "from model.CustomDataSet import CustomDataSet\n",
     "from outil import *\n",
     "from inter.interactions import Interaction\n",
     "from inter.simpleInteraction import simpleInteraction as inter"
@@ -124,7 +124,7 @@
     "            self._model.train()\n",
     "            actions = torch.tensor(actions, dtype=torch.float).to(device) # On passe toutes les actions que l'agent a fais\n",
     "            outcomes = torch.tensor(outcomes, dtype=torch.long).to(device) # On passe toutes oputcomes qu'il a recut\n",
-    "            data_loarder = CustomLoader(actions=actions, outcomes=outcomes, # On va créer un dataset\n",
+    "            data_loarder = CustomDataSet(actions=actions, outcomes=outcomes, # On va créer un dataset\n",
     "                         context_lenght= context_lenght)\n",
     "            \n",
     "            # A la place de donnée x = [act1] y = [out1]\n",
@@ -1636,6 +1636,221 @@
     "    print(f\"Action choisie : {action} \\033[0;34m{pourcent_by_10[-1]} \\033[0m\")\n",
     "    print(\"\\n\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Renouveau"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Je reprends l'agent 1 et ces facultées a prédire dans un environement. Et je vais ajouter un mécanisme de décision. Ce mécanisme de décision est censé plustard réduire la complexité car va selectionner les bon début d'interactions et ne pas ajouter des actions inutil."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agent1WithPast:\n",
+    "    def __init__(self, model, all_outcomes, all_actions, tokenizer, optimizer=None, loss_func=None):\n",
+    "        \"\"\" \n",
+    "        Création de l'agent.\n",
+    "        \n",
+    "        - self._action : action précédente\n",
+    "        - self._predicted_outcome : prédiction de l'outcome précédent\n",
+    "        \"\"\"\n",
+    "        self._action = None\n",
+    "        self._predicted_outcome = None\n",
+    "        self._model = model\n",
+    "        self._otimizer = optimizer\n",
+    "        self._loss_func = loss_func\n",
+    "        self._tokenizer:SimpleTokenizerV1 = tokenizer\n",
+    "        self._all_outcomes = all_outcomes\n",
+    "        self._all_actions = all_actions\n",
+    "        self._history_act = []\n",
+    "        self._history_fb = []\n",
+    "\n",
+    "    # Modifier\n",
+    "    def fit(self, actions:list, outcomes:list, nb_epoch:int= 5, validate_loader=None, threshold:float=None):\n",
+    "        \"\"\"\n",
+    "        Fonction d'entrainement de l'agent\n",
+    "        \"\"\"\n",
+    "        context_lenght = self._model.input_size\n",
+    "        if len(actions) + len(outcomes) < context_lenght:\n",
+    "            raise Exception(\"Not enough data to train model\")\n",
+    "\n",
+    "        # actions = [[self._tokenizer.encode(act)] for act in actions]\n",
+    "        # outcomes = self._tokenizer.encode(outcomes)\n",
+    "        \n",
+    "        if isinstance(self._model, torch.nn.Module):\n",
+    "            self._model.train()\n",
+    "            # actions = torch.tensor(actions, dtype=torch.float).to(device) \n",
+    "            # outcomes = torch.tensor(outcomes, dtype=torch.long).to(device) \n",
+    "            data_set = CustomDataSet(actions=actions, outcomes=outcomes,\n",
+    "                                    dim_out=len(self._all_outcomes),\n",
+    "                                    tokenizer=self._tokenizer,context_lenght=context_lenght)\n",
+    "            \n",
+    "            # A la place de donnée x = [act1] y = [out1]\n",
+    "            # Nous voulons donné : x = [act1, out1, act2] y = [out2]\n",
+    "\n",
+    "            data_loader = torch.utils.data.DataLoader( # On utilise torch pour charger les données\n",
+    "                data_set,batch_size=32, shuffle=True)\n",
+    "\n",
+    "\n",
+    "            # print(\"je dois fit avec :\")\n",
+    "            # print(actions)\n",
+    "            # print(outcomes)\n",
+    "            train_with_batch(model=self._model, \n",
+    "                    train_loader=data_loader,\n",
+    "                    optimizer=self._otimizer,\n",
+    "                    loss_func=self._loss_func,\n",
+    "                    nb_epochs=nb_epoch,\n",
+    "                    validate_loader=validate_loader,\n",
+    "                    threshold=threshold,\n",
+    "                    print_=True)\n",
+    "        else: # Si le model n'est pas un model pytorch\n",
+    "            raise Exception('Not implemented')\n",
+    "            self._model.fit(action, outcome)\n",
+    "            pass\n",
+    "\n",
+    "    # Modifier\n",
+    "    def predict(self, action):\n",
+    "        \"\"\"\n",
+    "        Funciton de prédiction\n",
+    "        \"\"\"\n",
+    "        if len(self._history_act) + len(self._history_fb) + 1 < self._model.input_size:\n",
+    "            raise Exception(\"Not enough data to predic model\")\n",
+    "        \n",
+    "        gap = (self._model.input_size - 1) // 2\n",
+    "        x = []\n",
+    "        for i in range(len(self._history_act) - gap, len(self._history_act)):\n",
+    "            x.append(self._history_act[i])\n",
+    "            x.append(self._history_fb[i])\n",
+    "        x.append(action)\n",
+    "        action = self._tokenizer.encode(x)\n",
+    "        if isinstance(self._model, torch.nn.Module):\n",
+    "            self._model.eval() \n",
+    "            action = torch.tensor(action, dtype=torch.float).to(device)\n",
+    "            x = self._model(action)\n",
+    "            x = torch.argmax(x, dim=0).item()\n",
+    "\n",
+    "        else:\n",
+    "            raise Exception('Not implemented')\n",
+    "            x=self._model.predict(action)\n",
+    "        \n",
+    "        return self._tokenizer.decode(x)\n",
+    "\n",
+    "    # Modofier\n",
+    "    def action(self, outcome, fit=True, validate_loader=None):\n",
+    "        \"\"\" \n",
+    "        Fonction qui choisit l'action a faire en fonction de la dernière \\\n",
+    "        intéraction avec l'environnement. \\n\n",
+    "        C'est ici que nous allons implémenter un mécanisme de ML \\\n",
+    "        pour choisir la prochaine action.\n",
+    "\n",
+    "        :param: **outcome** feedback de la dernière intéraction avec l'environnement\n",
+    "\n",
+    "        :return: **action** action à effectuer\n",
+    "        \"\"\"\n",
+    "        if self._action is not None:\n",
+    "            self._history_fb.append(str(outcome))\n",
+    "            print(f\"Action: {self._action}, Prediction: {self._predicted_outcome}, Outcome: {outcome}, \" \n",
+    "                  f\"\\033[0;31m Satisfaction: {self._predicted_outcome == outcome} \\033[0m\")\n",
+    "            # Le model s'est trompé, on le réentraine\n",
+    "            if self._predicted_outcome != outcome:\n",
+    "                # Sauf si il n'a pas encore assez de donnée\n",
+    "                if len(self._history_act) + len(self._history_fb) > self._model.input_size:\n",
+    "                    self.fit(actions=self._history_act, \n",
+    "                            outcomes=self._history_fb, \n",
+    "                            validate_loader=validate_loader, \n",
+    "                            nb_epoch=int(np.log(len(self._history_act))) * 30 + 5,\n",
+    "                            threshold=0.2)\n",
+    "\n",
+    "            self._action = np.random.choice(self._all_actions)\n",
+    "            if len(self._history_act) + len(self._history_fb) + 1 > self._model.input_size:\n",
+    "                self._predicted_outcome = self.predict(self._action)\n",
+    "            self._history_act.append(str(self._action))\n",
+    "        else:\n",
+    "            self._action = self._all_actions[0]\n",
+    "            self._history_act.append(self._action)\n",
+    "            print(f'len all interaction {len(self._history_act) + len(self._history_fb)}')\n",
+    "            print(f'input size {self._model.input_size}')\n",
+    "            print(f\"Action de base : {self._action} Prediction: {self._predicted_outcome}\")\n",
+    "        \n",
+    "        return self._action, self._predicted_outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 21\n",
+    "env_test2 = small_loop(x=1, y=1, theta=0)\n",
+    "model_ML = DeepNetwork(hidden_size=[128, 32, 16], input_size=input_dim, output_size=2)\n",
+    "optimizer = torch.optim.SGD(model_ML.parameters(), lr=1e-5, weight_decay=1e-6)\n",
+    "loss_func = nn.CrossEntropyLoss()\n",
+    "tokenizer = SimpleTokenizerV1(\n",
+    "    create_dico_numerate_word(env_test2.get_outcomes() + env_test2.get_actions()))\n",
+    "\n",
+    "agent_test2 = Agent1WithPast(\n",
+    "    model=model_ML,\n",
+    "    all_outcomes= env_test2.get_outcomes(),\n",
+    "    all_actions= env_test2.get_actions(),\n",
+    "    optimizer=optimizer,\n",
+    "    loss_func=loss_func,\n",
+    "    tokenizer=tokenizer)\n",
+    "\n",
+    "history_good = []\n",
+    "pourcent_by_10 = []\n",
+    "outcome = None\n",
+    "for i in range(500):\n",
+    "    print(f\"=======================\\033[0;32m iteration {i} \\033[0m=======================\")\n",
+    "    action, predi = agent_test2.action(outcome, validate_loader=None)\n",
+    "    outcome = env_test2.outcome(action)\n",
+    "    history_good.append(outcome == predi)\n",
+    "    pourcent_by_10.append(sum(history_good[-10:]) * 10 if len(history_good) >= 10 else 0)\n",
+    "    # agent_test2._model._init_weights()\n",
+    "    # print(f'action {action} predi {predi} outcome {outcome}')\n",
+    "    # print(f\"Action choisie : {action} \\033[0;34m{pourcent_by_10[-1]} \\033[0m\")\n",
+    "    # env_test2.display_world()\n",
+    "    # time.sleep(0.5)\n",
+    "    print(\"\\n\\n\")\n",
+    "\n",
+    "see_evolued_acc(pourcent_by_10[input_dim:])\n",
+    "\n",
+    "data_set = CustomDataSet(actions=agent_test2._history_act[:-1], outcomes=agent_test2._history_fb, \n",
+    "                        dim_out=len(env_test2.get_outcomes()),\n",
+    "                        tokenizer=tokenizer,\n",
+    "                        context_lenght=input_dim)\n",
+    "\n",
+    "data_loader_visu = torch.utils.data.DataLoader(data_set, batch_size=32, shuffle=True)\n",
+    "no_good = find_no_good(model=model_ML, test_loader=data_loader_visu)\n",
+    "\n",
+    "for x, label, pred in no_good:\n",
+    "    # x tensor to list\n",
+    "    x = x.tolist()\n",
+    "    label = label.tolist()\n",
+    "    pred = pred.tolist()\n",
+    "    print(f\"Action: {tokenizer.decode(x)} Label: {tokenizer.decode(label)} Prediction: {pred}\")\n",
+    "\n",
+    "# Count in list agent_test2._history_fb\n",
+    "count = {}\n",
+    "for x in agent_test2._history_fb:\n",
+    "    if x in count:\n",
+    "        count[x] += 1\n",
+    "    else:\n",
+    "        count[x] = 1\n",
+    "print(count)\n",
+    "print(f'En moyenne le modèl a {sum(history_good[input_dim:]) / (len(history_good) + input_dim)} chance de prédire un outcome')"
    ]
   }
  ],
