--- a/OG/4-LSTM_Basics.ipynb
+++ b/OG/4-LSTM_Basics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "9ff90728-b73f-4bad-bff7-e624ed0bb91d",
    "metadata": {},
    "outputs": [],
@@ -27,9 +27,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import ListedColormap, BoundaryNorm\n",
-    "from ipywidgets import Button, HBox,VBox, Output\n",
-    "from IPython.display import display\n",
-    "from time import sleep"
+    "from ipywidgets import Output\n",
+    "from IPython.display import display"
    ]
   },
   {
