--- a/OG/4-LSTM_Basics.ipynb
+++ b/OG/4-LSTM_Basics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "9ff90728-b73f-4bad-bff7-e624ed0bb91d",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "6b9ef85f-6a1a-427b-80e4-aa0642469267",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "7caf41c6-80d2-43ed-86c0-0a185117cdd4",
    "metadata": {
     "jupyter": {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "fa51e9c7-cfcb-480c-b7ea-138291a1d431",
    "metadata": {},
    "outputs": [],
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "ee7240d7-136e-4e33-83b6-828c0be99962",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a4d3ff3b0ad414dacf77c8f61eca78a",
+       "model_id": "d53ecf7cbf854a8f9e2d26de498f151f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "4a2531bc-0c9f-4430-b5c9-0fe54a5e81fd",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "e7f416ec-dd0c-460c-b062-80090c1ac232",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "717e39e2-5485-454c-88d8-a4fc461c7de2",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "ab8b0c51-f1aa-4ec8-b3cd-8b96034c6660",
    "metadata": {},
    "outputs": [],
@@ -437,17 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "1c0fc0b7-63fe-4807-9093-e906068017e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2011c13cc70>"
+       "<torch._C.Generator at 0x2134b83c1f0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "261bb9f4-9da7-4038-8cb6-b1aa50e1e883",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "eef2fd6a-fba1-4daf-a58d-9a852bdb5219",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "42a121ba-b701-4f74-b3f3-8c07c9c84254",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "b7fa4958-837a-4b82-b696-903fd62797b2",
    "metadata": {},
    "outputs": [],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "daa52704-1c1f-416f-ada8-1f4cba288a27",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "45d6fb2e-0d66-4cbd-a7a3-5d5fb101dfa6",
    "metadata": {},
    "outputs": [],
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "0e628999-696a-4049-8f7e-e260b7342dd7",
    "metadata": {},
    "outputs": [
