--- a/OG/5-AgentRNN.ipynb
+++ b/OG/5-AgentRNN.ipynb
@@ -12,7 +12,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9558e0ed-3996-4e38-968e-c566140d3034",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +72,6 @@
     "import os\n",
     "from ipywidgets import Output\n",
     "from tqdm.notebook import trange, tqdm\n",
-    "# Import necessary libraries\n",
     "from matplotlib.colors import ListedColormap, BoundaryNorm\n",
     "from IPython.display import display\n",
     "\n",
@@ -295,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x23040541c30>"
+       "<torch._C.Generator at 0x1c721b11bf0>"
       ]
      },
      "execution_count": 5,
@@ -316,20 +320,6 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
-    "class FeedbackPredictor(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, output_size):\n",
-    "        super().__init__()\n",
-    "        self.input_size = input_size\n",
-    "        self.rnn = nn.GRU(input_size, hidden_size, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_size, output_size)\n",
-    "    \n",
-    "    def forward(self, x, h, _):\n",
-    "        if h is None:\n",
-    "            h = torch.zeros(1, x.size(0), 16)\n",
-    "        out, h = self.rnn(x, h)\n",
-    "        return self.fc(out[:, -1, :]), h, None\n",
-    "\n",
     "# Inspired by https://github.com/LukeDitria/pytorch_tutorials.git\n",
     "    \n",
     "class LSTM(nn.Module):\n",
@@ -567,7 +557,6 @@
     "        for i in range(-self._gap_test//2, 0, 1):\n",
     "            x.append(self._history_act[i])\n",
     "            x.append(self._history_fb[i])\n",
-    "        # seq = self._tokenizer.encode(x) MODIFIE\n",
     "        res = self.recursif_expective_valance(seq=x, max_depth=3, seuil=0.3)\n",
     "        top_5 = sorted(res.items(), key=lambda x: x[1], reverse=True)[:5]\n",
     "        # print(f\"Top 5 of sequences with the best expected valance for {x}\")\n",
@@ -635,7 +624,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76b431b40f1d4c6492d9c792709ccbaf",
+       "model_id": "1b547841d16f4bb6ae67300e86deaddd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -649,72 +638,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e95835dbd299474292afc8dd5fb15443",
+       "model_id": "d78f1ebb626442e091c61e90743a8c4a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/50 [00:00<?, ?it/s]"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Action de base : 2 Prediction: None\n",
-      "Action: 2, Prediction: None, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 3, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 3, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: None, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 1, Outcome: 1, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 3, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 3, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 4, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 2, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 1, Outcome: 1, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 4, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 4, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 4, Prediction: 1, Outcome: 0, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: 1, Outcome: 1, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 1, Outcome: 1, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 3, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 4, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 3, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 1, Outcome: 1, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 3, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 4, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 2, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 5, Prediction: 0, Outcome: 1, \u001b[0;31m Satisfaction: False \u001b[0m\n",
-      "Action: 4, Prediction: 0, Outcome: 0, \u001b[0;31m Satisfaction: True \u001b[0m\n"
-     ]
     }
    ],
    "source": [
@@ -749,10 +682,10 @@
     "out = Output()\n",
     "display(out)\n",
     "\n",
-    "for i in tqdm(range(50)):\n",
+    "for i in tqdm(range(100)):\n",
     "    # start_time = time.time()\n",
     "    action, predi, description = agent_test2.action(outcome, fit=False, decide=False)\n",
-    "    print(description)\n",
+    "    # print(description)\n",
     "    outcome = small_loop.outcome(action)\n",
     "    history_good.append(outcome == predi)\n",
     "    pourcent_by_10.append(sum(history_good[-10:]) * 10 if len(history_good) >= 10 else 0)\n",
