--- a/OG/5-AgentRNN.ipynb
+++ b/OG/5-AgentRNN.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6a92d788-0cf7-4b64-8b38-47ad7a1f588f",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "49edfed9-2601-40e9-affd-8b73500bba2d",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d744460e-79da-48ce-9c90-ded24579c0f3",
    "metadata": {
     "jupyter": {
@@ -289,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1a447c0ebf0>"
+       "<torch._C.Generator at 0x1afce49bcd0>"
       ]
      },
      "execution_count": 5,
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "id": "32558ab5-3c0a-4a2d-872a-fdcc66f2266e",
    "metadata": {
     "jupyter": {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
    "id": "76add543-3b6c-46e9-be1f-92a5c2f3cd0d",
    "metadata": {
     "jupyter": {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 9,
    "id": "195cdcd4-4adb-4771-a889-0d344515c629",
    "metadata": {},
    "outputs": [],
@@ -559,11 +559,11 @@
     "                loss.backward()\n",
     "                self.optimizer.step()\n",
     "\n",
-    "    def predict(self, action, gap=5):\n",
-    "        if len(self._history_act) + len(self._history_fb) < gap:\n",
+    "    def predict(self, action):\n",
+    "        if len(self._history_act) + len(self._history_fb) < self._context_length:\n",
     "            raise Exception(\"Not enough data to train model\")\n",
     "        x = []\n",
-    "        for i in range(len(self._history_act) - gap, len(self._history_act)):\n",
+    "        for i in range(len(self._history_act) - self._context_length, len(self._history_act)):\n",
     "            x.append(self._history_act[i])\n",
     "            x.append(self._history_fb[i])\n",
     "        x.append(action)\n",
@@ -578,7 +578,6 @@
     "            pred, _, _ = self._model(action, h, cell)\n",
     "\n",
     "        pred_feedback = torch.argmax(pred[:, -1, :]).item()\n",
-    "        # pred_feedback = self._tokenizer.decode(pred_feedback)\n",
     "        \n",
     "        return pred_feedback\n",
     "    \n",
@@ -665,7 +664,7 @@
     "                self._action = np.random.choice(self._all_actions)\n",
     "                \n",
     "            if len(self._history_act) + len(self._history_fb) > self._gap_test:\n",
-    "                self._predicted_outcome = self.predict(self._action, gap=self._gap_test)\n",
+    "                self._predicted_outcome = self.predict(self._action)\n",
     "            \n",
     "            self._history_act.append(self._action)\n",
     "        else:\n",
@@ -686,14 +685,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 10,
    "id": "1b64219e-8c44-4eb5-83d5-829aa3ea72f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e285bd572ec04dd4a5642e8b6fdc94e0",
+       "model_id": "99bff779c6264462a0baef7034718879",
        "version_major": 2,
        "version_minor": 0
       },
@@ -749,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 39,
    "id": "3676217d-5634-4b7e-bc28-bc354f65e192",
    "metadata": {},
    "outputs": [
@@ -757,7 +756,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 20\n",
+      "step: 28\n",
       "Top 5 of sequences with the best expected valance for [2, 0, 4, 0]\n",
       "Sequence: [4, 0, 2, 0] Expected valance: 3.0375\n",
       "Sequence: [2, 0] Expected valance: 2.9125\n",
